[workspace.metadata.workspaces]
independent = true

[workspace]
resolver = "2"
members = [
    "packages/generic_tests",
    "packages/integration_tests",
    "packages/network",
    "packages/core/utils",
    "packages/core/identity",
    "packages/core/router",
    "packages/routers/layers_spread_router",
    "packages/services/dht_discovery",
    "packages/services/manual_discovery",
    "packages/services/layers_spread_router_sync",
    "packages/services/key_value",
    "packages/services/tun_tap",
    "packages/services/pub_sub",
    "packages/services/rpc",
    "packages/services/virtual_socket",
    "packages/services/node_alias",
    "packages/transports/vnet",
    "packages/transports/tcp",
    "packages/transports/udp",
    "packages/transports/compose",
    "packages/apps/redis",
    "packages/runner",
    "examples",
]

[workspace.dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
async-std = { version = "1.12", features = ["unstable", "attributes"] }
async-notify = "0.2"
thiserror = "1.0"
log = "0.4"
rand = "0.8"
parking_lot = "0.12"
env_logger = "0.11"
allocation-counter = { version = "0.8.1" }
clap = { version = "4.4.14", features = ["derive", "env"] }
mockall = "0.12.1"
# SmallMap is has better performance than HashMap for small maps
small-map = "0.1"
