[workspace.metadata.workspaces]
independent = true

[workspace]
resolver = "2"
members = [
    "bin",
    "fuzz",
    "packages/core/utils",
    "packages/core/identity",
    "packages/core/router",
    "packages/network",
    "packages/runner",
]

[workspace.dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
rand = "0.8"
parking_lot = "0.12"
env_logger = "0.11"
clap = { version = "4.4", features = ["derive", "env"] }
mockall = "0.12.1"
sans-io-runtime = { git = "https://github.com/8xff/sans-io-runtime.git", rev = "c2d0c78ae5bfa7ab9c7942a7333a21a439fc5edb"}