[workspace.metadata.workspaces]
independent = true

[workspace]
resolver = "2"
members = [
    "bin",
    "fuzz",
    "packages/core/utils",
    "packages/core/identity",
    "packages/core/router",
    "packages/network",
    "packages/runner",
]

[workspace.dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
log = "0.4"
rand = "0.8"
parking_lot = "0.12"
env_logger = "0.11"
clap = { version = "4.4", features = ["derive", "env"] }
mockall = "0.13"
num_enum = "0.7"
convert-enum = "0.1.0"
sans-io-runtime = { version = "0.3", default-features = false }
