[package]
name = "examples"
version = "0.1.0"
edition = "2021"
description = "Examples for atm0s-sdn"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atm0s-sdn = { path = "../packages/runner", features = ["all"], version = "0.1.10" }
atm0s-sdn-tun-tap = { path = "../packages/services/tun_tap", version = "0.1.6" }
atm0s-sdn-redis-server = { path = "../packages/apps/redis", version = "0.1.7" }
reedline-repl-rs = { version = "1.0.7", features = ["async"] }
thiserror = { workspace = true }
async-std = { workspace = true }
env_logger = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
bytes = "1.5.0"
