[package]
name = "bin-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
atm0s-sdn-network = { path = "../packages/network", version = "0.6.2", features = ["fuzz"] }

[[bin]]
name = "network_control_pkt"
path = "fuzz_targets/network_control_pkt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "transport_msg"
path = "fuzz_targets/transport_msg.rs"
test = false
doc = false
bench = false
