[package]
name = "whip-whep"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
sans-io-runtime = { path = "../../../sans-io-runtime" }
atm0s-sdn = { path = "../../packages/runner" }
derive_more = "0.99.17"
str0m = "0.5.0"
tiny_http = "0.12.0"
signal-hook = "0.3.17"
env_logger = "0.11.3"
log.workspace = true
faster-stun = "1.0.2"
clap.workspace = true
