[package]
name = "whip-whep"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
sans-io-runtime = { git = "https://github.com/8xFF/sans-io-runtime.git", rev = "1be9705b4fe9852b7c1ac66dc610fedf94a83971" }
atm0s-sdn = { path = "../../packages/runner" }
derive_more = "0.99.17"
str0m = "0.5.0"
tiny_http = "0.12.0"
signal-hook = "0.3.17"
env_logger = "0.11.3"
log.workspace = true
faster-stun = "1.0.2"
clap.workspace = true
serde = "1.0.197"
bincode = "1.3.3"
rand = "0.8.5"
